kubernetes/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: finsight
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:8.11.1
        ports:
        - containerPort: 5601
        resources:
          limits:
            cpu: 500m
            memory: 1.5Gi
          requests:
            cpu: 100m
            memory: 768Mi
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: finsight
spec:
  selector:
    app: kibana
  ports:
  - port: 5601
    targetPort: 5601
    nodePort: 30561
  type: NodePort
